   * Major visual overhaul:
     * Most UI elements have new images
     * Button sizes have been standardized; regular buttons are 108x22 (H22), menu
       buttons are 100x20 (H20), square buttons are either 25x25 or 30x30 depending
       on purpose.
     * Regular and menu buttons are now in subdirectories of images/buttons/
     * Button icon overlays are now in images/icons/
 * WML engine:
   * Added new aspect 'advancements' which with lua engine can handle a
     function return type of the form f(x, y) -> String. 'advancements'
     tells the AI to what unit a given unit should advance to.
   * Fix "Shuffle sides" incorrect behaviour: children inside [side] were also
     swapped.
   * Fixed incorrect image path function name in error messages generated by
     using ~CROP() with negative coordinates.
 * Miscellaneous and bug fixes
   * Fixed minor issue with Drake Clasher animations
   * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
     in alphabetical order
   * Added -Wno-null-conversion to the CMake pedantic flags.
   * Changed: Decreased the pango cairo dependency to version 1.21.3.
   * Changed: Mark system headers as system headers in CMake.
   * Fixed the recall list sometimes getting confused when dismissing a recall.
   * Prevent unchecked memory access in cut_surface()

Version 1.11.4:
 * AI:
   * Reverted new Lua AI persistent storage mechanism for external CAs that
     would crash Wesnoth under certain circumstances in 1.11.3. This will be
     re-committed in an upcoming release.
   * Micro AIs
     * Healer Support MAI now respects RCA AI [avoid] aspect.

Version 1.11.3:
 * AI:
   * Micro AIs
     * New Goto and Zone Guardian MAIs
     * Change SUF/SLF names to [filter]/[filter_location] and variants thereof
     * Add optional SUF to Healer Support MAI
 * Campaigns:
   * Descend into Darkness:
     * Fix the surviving orc leader starting poisoned after scenario 5.
 * Language and i18n: