@@ -102,6 +102,11 @@
     shift=yes
 [/hotkey]
 [hotkey]
+    command=killunit
+    key=k
+    shift=yes
+[/hotkey]
+[hotkey]
     command=labelteamterrain
     key=l
     {IF_APPLE_CMD_ELSE_CTRL}
