@@ -32,6 +32,7 @@ Version 1.11.4+dev:
        on purpose.
      * Regular and menu buttons are now in subdirectories of images/buttons/
      * Button icon overlays are now in images/icons/
+   * Added possibility to kill unit under cursor with context menu in debug mode.
  * WML engine:
    * Added new aspect 'advancements' which with lua engine can handle a
      function return type of the form f(x, y) -> String. 'advancements'
